--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,4 +1,32 @@
 @charset "UTF-8";
+@-webkit-keyframes teste {
+  0% {
+    background-color: #c36291;
+  }
+  25% {
+    background-color: #bb3073;
+  }
+  50% {
+    background-color: #c22f76;
+  }
+  100% {
+    background-color: #c36291;
+  }
+}
+@keyframes teste {
+  0% {
+    background-color: #c36291;
+  }
+  25% {
+    background-color: #bb3073;
+  }
+  50% {
+    background-color: #c22f76;
+  }
+  100% {
+    background-color: #c36291;
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -7,7 +35,7 @@
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 155px;
+  scroll-padding-top: 295px;
 }
 
 body {
@@ -169,6 +197,10 @@ a:hover::after {
   align-items: center;
   justify-content: center;
   height: 50vh;
+  width: 96vw;
+  margin: auto;
+  border-radius: 30px;
+  border: 5px solid #fff;
 }
 #divSobre h1 {
   color: #fff;
@@ -185,6 +217,7 @@ a:hover::after {
   width: 96vw;
   margin: auto;
   border-radius: 30px;
+  border: 5px solid #fff;
 }
 #techs img {
   width: 14vw;
@@ -193,7 +226,7 @@ a:hover::after {
   box-shadow: 4px 4px 40px 4px rgba(168, 168, 168, 0.25);
   border-radius: 10px;
   border-radius: 25px;
-  padding: 25px;
+  padding: 2vw;
   border: 5px outset #F1B8D2;
   text-align: center;
   transition: 600ms;
@@ -203,6 +236,55 @@ a:hover::after {
   box-shadow: inset 290px 0 0 0 rgba(0, 0, 0, 0.671);
   border: outset 5px #afa2a8;
   color: rgb(255, 253, 255);
+}
+
+.Conhecimento {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5vh;
+  color: #fff;
+}
+.Conhecimento .fundoNivel {
+  margin-top: 1vh;
+  width: 100%;
+  height: 2vh;
+  background-color: #fff;
+  border-radius: 50px;
+}
+.Conhecimento #nivelHtml {
+  width: 80%;
+  height: 2vh;
+  background-color: #e96228;
+  border-radius: 50px;
+}
+.Conhecimento #nivelCSS {
+  width: 60%;
+  height: 2vh;
+  background-color: #28a4d8;
+  border-radius: 50px;
+}
+.Conhecimento #nivelJS {
+  width: 40%;
+  height: 2vh;
+  background-color: #efd81d;
+  border-radius: 50px;
+}
+.Conhecimento #nivelSASS {
+  width: 60%;
+  height: 2vh;
+  background-color: #c36291;
+  border-radius: 50px;
+  -webkit-animation: teste infinite;
+          animation: teste infinite;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+}
+.Conhecimento #nivelBOOT {
+  width: 40%;
+  height: 2vh;
+  background-color: #7811ee;
+  border-radius: 50px;
 }
 
 #projetosFotos {
