--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,4 +1,15 @@
 @use 'mixins'
+@keyframes teste
+  0%
+    background-color: #c36291
+  25%
+    background-color: #bb3073
+    
+  50%
+    background-color: #c22f76
+
+  100%
+    background-color: #c36291
 
 *
   padding: 0
@@ -6,7 +17,7 @@
   box-sizing: border-box
 html
   scroll-behavior: smooth
-  scroll-padding-top: 155px
+  scroll-padding-top: 295px
 
 body
   background: linear-gradient(252.34deg, #F1B8D2 -4.03%, #95BBE9 112.41%)
@@ -129,6 +140,10 @@ a
   align-items: center
   justify-content: center
   height: 50vh
+  width: 96vw
+  margin: auto
+  border-radius: 30px
+  border: 5px solid #fff
   h1
     color: #fff
 
@@ -143,6 +158,7 @@ a
   width: 96vw
   margin: auto
   border-radius: 30px
+  border: 5px solid #fff
   img
     width: 14vw
     height: 25vh
@@ -150,7 +166,7 @@ a
     box-shadow: 4px 4px 40px 4px rgba(168, 168, 168, 0.25)
     border-radius: 10px
     border-radius: 25px
-    padding: 25px
+    padding: 2vw
     border: 5px outset #F1B8D2
     text-align: center
     transition: 600ms
@@ -160,6 +176,47 @@ a
       box-shadow: inset 290px 0 0 0 rgba(0, 0, 0, 0.671)
       border: outset 5px #afa2a8
       color: rgb(255, 253, 255)
+.Conhecimento
+  display: flex
+  flex-direction: column
+  align-items: center
+  gap: 5vh
+  color: #fff
+  .fundoNivel
+    margin-top: 1vh
+    width: 100%
+    height: 2vh
+    background-color: #fff
+    border-radius: 50px
+
+  #nivelHtml
+    width: 80%
+    height: 2vh
+    background-color: #e96228
+    border-radius: 50px
+  #nivelCSS
+    width: 60%
+    height: 2vh
+    background-color: #28a4d8
+    border-radius: 50px
+  #nivelJS
+    width: 40%
+    height: 2vh
+    background-color: #efd81d
+    border-radius: 50px
+  #nivelSASS
+    width: 60%
+    height: 2vh
+    background-color: #c36291
+    border-radius: 50px
+    animation: teste infinite
+    animation-duration: 5s
+
+  #nivelBOOT
+    width: 40%
+    height: 2vh
+    background-color: #7811ee
+    border-radius: 50px
 
 #projetosFotos
   display: flex
